--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A reddit bot to decode binary",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "ava"
   },
   "keywords": [
     "ascii",
@@ -20,7 +21,9 @@
     "snoostorm": "0.0.5",
     "snoowrap": "^1.15.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ava": "^0.25.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shreyasminocha/decode-binary-bot.git"
